@@ -2,6 +2,10 @@ partman (65) UNRELEASED; urgency=low
 
   * Colin Watson
     - Constify 'name' arguments to many functions.
+    - devices[index_of_name(name)] has unspecified results, as
+      index_of_name() may change the devices pointer; this caused
+      parted_server to crash on OPEN when compiled with gcc 4.0. Insert a
+      sequence point to fix this.
 
  -- Colin Watson <cjwatson@debian.org>  Wed, 11 May 2005 09:08:54 +0100
 
